Updated selectors. Second go around

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="selectors.css">
+  <link rel="stylesheet" href="css/selectors.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </ul>
     </nav>
   </header>
-  
+
   <article>
     <section>
       <div class="month-list">
@@ -64,7 +64,7 @@
       </div>
     </section>
   </article>
-  
+
   <article>
     <section>
       <div class="grandparent">
@@ -81,9 +81,9 @@
       </div>
     </section>
   </article>
-  
+
   <footer class="padded">
-  
+
     <div class="disclaimer">
       Only one purchase per household.
       <a href="#">
@@ -94,17 +94,17 @@
         </span>
       </a>
     </div>
-  
+
     <div class="promo">
       Purchase a book today and receive the eBook for free!
     </div>
-  
+
     <span>
         <input type="text" name="email" placeholder="Enter your email address">
         <input type="text" name="name" placeholder="Enter your name">
         <input type="tel" name="telephone" placeholder="Enter your telephone number">
     </span>
-  
+
   </footer>
 </body>
 </html>
